samples/_failures_safe/1761344726_440cbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c75b2235.c: In function ‘main’:
./samples/SAFE/__tmp_c75b2235.c:155:9: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  155 |         print
      |         ^~~~~
      |         printf
./samples/SAFE/__tmp_c75b2235.c:155:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c75b2235.c:155:14: error: expected ‘;’ at end of input
  155 |         print
      |              ^
      |              ;
./samples/SAFE/__tmp_c75b2235.c:155:9: error: expected declaration or statement at end of input
  155 |         print
      |         ^~~~~
./samples/SAFE/__tmp_c75b2235.c:155:9: error: expected declaration or statement at end of input
